# ktg-orchestrator

./: .gitignore  AGENTS.md  Cargo.toml  DECISIONS.md  INBOX.md  Justfile  PREFERENCES.md  README.md  SESSION_TODO.md  SOMEDAY.md  STATUS.md  UPGRADE.md  manifest.toml
.agents/skills/: ai-max-start
.claude/: context.md
.github/workflows/: ci.yml
.pi/: settings.json
archive/: README.md
checkpoints/: README.md
deltas/: README.md
deltas/active/: README.md
deltas/archive/: README.md
docs/context/: ktg-system.md
docs/docs-scan/: DOCS-SCAN-2026-06-20-framework-v7-1-adopt.md
docs/navigation/: README.md  manifest-index.json  manifest-index.md
docs/runbooks/: missing-order.md
evals/docs-coherence/runs/20260620T185700904302Z/: report.json
initiatives/: README.md
materialization/: README.md
materialization/active/: README.md
materialization/archive/: README.md
proofs/: README.md
proofs/runs/: README.md
specs/: README.md
tests/: test_pull_all_recipe.py  test_startup_snapshot.py
tools/: startup_snapshot.py  startup_worktrees.py
